# SectorRenderer

./: SectorRenderer.sln  meson.build
Engine/: Camera.cpp  Camera.hpp  ComputeShaderProgram.cpp  ComputeShaderProgram.hpp  Engine.vcxproj  Engine.vcxproj.filters  Player.cpp  Player.hpp  RasterShaderProgram.cpp  RasterShaderProgram.hpp  RenderData.cpp  RenderData.hpp  Renderer.cpp  Renderer.hpp  Sector.hpp  ShaderProgram.cpp  ShaderProgram.hpp  ThreadPool.hpp  glad.c  linemath.cpp  linemath.hpp  main.cpp  map.sec
MapEditor/: Camera.cpp  Camera.hpp  MapEditor.vcxproj  MapEditor.vcxproj.filters  Sector.hpp  glad.c  main.cpp  map.sec
glad/include/glad/: glad.h
glad/src/: glad.c
